@@ -34,7 +34,7 @@ import main.java.memoranda.util.Local;
 
 /*$Id: TableSorter.java,v 1.7 2004/10/07 08:52:32 ivanrise Exp $*/
 public class TableSorter extends TableMap {
-    int             indexes[];
+    int[] indexes;
     Vector          sortingColumns = new Vector();
     boolean         ascending = true;
     int compares;
@@ -125,27 +125,27 @@ public class TableSorter extends TableMap {
 	    int result;
 	    if(data.getColumnName(column).equals(Local.getString("Priority"))) {
 		    Hashtable priority = new Hashtable();
-		    priority.put(Local.getString("Lowest"), new Integer(1));
-		    priority.put(Local.getString("Low"), new Integer(2));
-		    priority.put(Local.getString("Normal"), new Integer(3));
-		    priority.put(Local.getString("High"), new Integer(4));
-		    priority.put(Local.getString("Highest"), new Integer(5));
+		    priority.put(Local.getString("Lowest"), Integer.valueOf(1));
+		    priority.put(Local.getString("Low"), Integer.valueOf(2));
+		    priority.put(Local.getString("Normal"), Integer.valueOf(3));
+		    priority.put(Local.getString("High"), Integer.valueOf(4));
+		    priority.put(Local.getString("Highest"), Integer.valueOf(5));
 	
-		    Integer s1 = (Integer)priority.get((String)data.getValueAt(row1, column));
-		    Integer s2 = (Integer)priority.get((String)data.getValueAt(row2, column));
+		    Integer s1 = (Integer)priority.get(data.getValueAt(row1, column));
+		    Integer s2 = (Integer)priority.get(data.getValueAt(row2, column));
 		    if (s1==null || s2==null) return 0;
 		    result = s1.compareTo(s2);
 	    }
 	    else if(data.getColumnName(column).equals(Local.getString("Status"))) {
 		    Hashtable priority = new Hashtable();
-		    priority.put(Local.getString("Completed"), new Integer(1));
-		    priority.put(Local.getString("Failed"), new Integer(2));
-		    priority.put(Local.getString("Scheduled"), new Integer(3));
-		    priority.put(Local.getString("Active"), new Integer(4));
-		    priority.put(Local.getString("Deadline"), new Integer(5));
+		    priority.put(Local.getString("Completed"), Integer.valueOf(1));
+		    priority.put(Local.getString("Failed"), Integer.valueOf(2));
+		    priority.put(Local.getString("Scheduled"), Integer.valueOf(3));
+		    priority.put(Local.getString("Active"), Integer.valueOf(4));
+		    priority.put(Local.getString("Deadline"), Integer.valueOf(5));
 	
-		    Integer s1 = (Integer)priority.get((String)data.getValueAt(row1, column));
-		    Integer s2 = (Integer)priority.get((String)data.getValueAt(row2, column));
+		    Integer s1 = (Integer)priority.get(data.getValueAt(row1, column));
+		    Integer s2 = (Integer)priority.get(data.getValueAt(row2, column));
 		    if (s1==null || s2==null) return 0;
 		    result = s1.compareTo(s2);
 	    }		
@@ -238,7 +238,7 @@ public class TableSorter extends TableMap {
         compares = 0;
         // n2sort();
         // qsort(0, indexes.length-1);
-        shuttlesort((int[])indexes.clone(), indexes, 0, indexes.length);
+        shuttlesort(indexes.clone(), indexes, 0, indexes.length);
         //System.out.println("Compares: "+compares);
     }
 
@@ -259,7 +259,7 @@ public class TableSorter extends TableMap {
     // arrays. The number of compares appears to vary between N-1 and
     // NlogN depending on the initial order but the main reason for
     // using it here is that, unlike qsort, it is stable.
-    public void shuttlesort(int from[], int to[], int low, int high) {
+    public void shuttlesort(int[] from, int[] to, int low, int high) {
         if (high - low < 2) {
             return;
         }
@@ -286,9 +286,7 @@ public class TableSorter extends TableMap {
         order diminishes - it may drop very quickly.  */
 
         if (high - low >= 4 && compare(from[middle-1], from[middle]) <= 0) {
-            for (int i = low; i < high; i++) {
-                to[i] = from[i];
-            }
+            if (high - low >= 0) System.arraycopy(from, low, to, low, high - low);
             return;
         }
 
@@ -332,7 +330,7 @@ public class TableSorter extends TableMap {
         sortBy = column;
         this.ascending = ascending;
         sortingColumns.removeAllElements();
-        sortingColumns.addElement(new Integer(column));
+        sortingColumns.addElement(Integer.valueOf(column));
         sort(this);
         super.tableChanged(new TableModelEvent(this)); 
     }
